# prout

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: copy_if_exists.cmake
skills/prout-credential-access/: SKILL.md
src/arbiter/: arbiter.cc  arbiter.h  verdict.h
src/audit/: audit.cc  audit.h
src/cli/: args.h  audit_cmd.cc  client.cc  commands.h  main.cc  vault_cmd.cc
src/common/: paths.cc  paths.h  prompt.cc  prompt.h  secure_mem.cc  secure_mem.h
src/daemon/: lease.cc  lease.h  serve.cc
src/ipc/: ipc.cc  ipc.h
src/vault/: crypto.cc  crypto.h  vault.cc  vault.h
tests/: hardening_tests.cc
tests/scripts/: cli_flows.ps1
web/: index.html
